[package]
name = "resnet_burn"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", rev = "75cb5b6d5633c1c6092cf5046419da75e7f74b11", features = [
    "ndarray",
] }
burn-import = { git = "https://github.com/tracel-ai/burn.git", rev = "75cb5b6d5633c1c6092cf5046419da75e7f74b11" }
image = { version = "0.24.7", features = ["png", "jpeg"] }
